# maze

./: Cargo.toml  README.md  rustfmt.toml
src/: agent.rs  environment.rs  lib.rs  render.rs  simulator.rs
src/maze/: coordinates.rs  environment.rs  generator.rs  mod.rs  render.rs  solver.rs
src/maze/agent/: astar.rs  graph_based.rs  greedy.rs  mod.rs
